force-app/main/default/objects/Car_Inventory__c/fields/Sedan_Transmision_Type__c.field-meta.xml
<CustomField>
    <fullName>Sedan_Transmision_Type__c</fullName>
    <description>The type of transmission used in the sedan (e.g., Automatic, 
Manual).</description>
    <label>Sedan Transmision Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>