force-app/main/default/objects/Car_Inventory__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The status of the car (e.g. Available Soon)</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Available Soon</fullName>
            </value>
            <value>
                <fullName>Discontinued</fullName>
            </value>
            <value>
                <fullName>Limited Edtion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>