force-app/main/default/objects/Car_Inventory__c/fields/SUV_Cargo_Space__c.field-meta.xml
<CustomField>
    <fullName>SUV_Cargo_Space__c</fullName>
    <description>The cargo space of the SUV (e.g., 30 cubic feet, 50 cubic feet).</description>
    <label>SUV Cargo Space</label>
    <length>20</length>
    <type>Text</type>
</CustomField>