force-app/main/default/objects/Car_Inventory__c/recordTypes/Sedan.recordType-meta.xml
<RecordType>
    <fullName>Sedan</fullName>
    <active>true</active>
    <description>Sedan is an enclosed chair for conveying one person, carried between horizontal poles by two porters.</description>
    <label>Sedan</label>
</RecordType>