force-app/main/default/objects/Car_Inventory__c/recordTypes/SUV.recordType-meta.xml
<RecordType>
    <fullName>SUV</fullName>
    <active>true</active>
    <description>SUV features from off-road vehicles, such as raised ground clearance</description>
    <label>SUV</label>
</RecordType>