force-app/main/default/objects/Car_Inventory__c/listViews/Sedan.listView-meta.xml
<ListView>
    <fullName>Sedan</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Make__c</field>
        <operation>equals</operation>
        <value>fresh</value>
    </filters>
    <filters>
        <field>Model__c</field>
        <operation>equals</operation>
        <value>new variant</value>
    </filters>
    <filters>
        <field>Year__c</field>
        <operation>greaterOrEqual</operation>
        <value>2021</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Available Soon,Limited Edtion</value>
    </filters>
    <label>SUV</label>
</ListView>