force-app/main/default/objects/Car_Inventory__c/listViews/SUV.listView-meta.xml
<ListView>
    <fullName>SUV</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Sedan</label>
</ListView>